fix breakpoints on small devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -96,7 +96,7 @@ header {
   font-size: 5rem;
   font-family: "work-sans";
   font-weight: 400;
-  margin: 3rem;
+  margin: 3rem 3rem 0 3rem;
   line-height: 70px;
   gap: 10px;
 
@@ -237,7 +237,7 @@ header {
   opacity: 1;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1367px) {
   .construction-text {
     font-size: 4rem;
     line-height: 50px;
